<resources>
    <string name="app_name" translatable="false">Euzhpad Debug</string>
    <string name="preferences">Preferences</string>
    <string name="export_notes">Export notes</string>
    <string name="new_note">new note</string>
    <string name="filter">filter</string>
    <string name="donate">Donate</string>
    <string name="about">About</string>
    <string name="settings_edit">Edit</string>
    <string name="settings_delete">Delete</string>
    <string name="settings_share">Share</string>
    <string name="settings_export">Export</string>
    <string name="settings_lock">Lock with password</string>
    <string name="settings_unlock">Unlock by password</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="edit_note_toolbar">Edit Note</string>
    <string name="share">share</string>
    <string name="search_title">search</string>
    <string name="save">Save</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="sorting">Sorting</string>
    <string name="by_title">By title</string>
    <string name="by_create_date">By create date</string>
    <string name="by_change_date">By change date</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="saved">Saved</string>
    <string name="empty_note">Empty note</string>
    <string name="save_note_title">Save a note</string>
    <string name="save_note_message">Do you want to save this note?</string>
    <string name ="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="enter_password_for">Enter password for \"%1$s\"</string>
    <string name="next">Next</string>
    <string name="success_export_message">all notes have been successfully exported to %1$s</string>

    <string-array name="alert_dialog_menu_lock">
        <item>Edit</item>
        <item>Delete</item>
        <item>Share</item>
        <item>Export</item>
        <item>Lock with password</item>
    </string-array>

    <string-array name="alert_dialog_menu_unlock">
        <item>Edit</item>
        <item>Delete</item>
        <item>Share</item>
        <item>Export</item>
        <item>Unlock by password</item>
    </string-array>
</resources>