<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.note_list.NoteListFragment">
    <item
        android:id="@+id/action_new_note"
        android:icon="@drawable/pen"
        android:title="@string/new_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/filter_icon"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_preferences"
        android:title="@string/preferences" />

    <item
        android:id="@+id/action_export_notes"
        android:title="@string/export_notes"/>
</menu>