<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/sorting"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_group_sorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layoutDirection="rtl">

        <RadioButton
            android:id="@+id/rb_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_title"
            android:gravity="end"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/rb_create_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/by_create_date"
            android:gravity="end"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/rb_change_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:text="@string/by_change_date"
            android:textSize="19sp" />
    </RadioGroup>


</LinearLayout>